@@ -4,7 +4,7 @@
 # built-in commands.  Sourcing this file into Tcl runs the tests and
 # generates output for errors.  No output means no errors were found.
 #
-# Copyright (c) 2001 by Vince Darley.
+# Copyright (c) 2001-2002 by Vince Darley.
 #
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
@@ -86,6 +86,30 @@ test vfs-2.2 {mount, delete sub interp} {
     vfs::filesystem unmount foo
     filelistrelative $res $remove
 } {foo2 foo foo}
+
+test vfs-3.1 {vfs helpers: in memory channels} {
+    close [::vfs::memchan]
+    # If we get here, it's ok.  If this test fails,
+    # probably many other tests will fail too.
+} {}
+
+test vfs-3.2 {vfs helpers: crc} {
+    # If this test fails, probably many other tests will fail too (at
+    # least anything to do with 'zip' vfs).
+    ::vfs::crc abcd
+} {Kc*}
+
+test vfs-3.3 {vfs helpers: zip} {
+    # If this test fails, probably many other tests will fail too (at
+    # least anything to do with 'zip' vfs).
+    ::vfs::zip -mode compress 1234567890
+} "\x78\x9c\x33\x34\x32\x36\x31\x35\x33\xb7\xb0\x34\x0\x0\xb\x2c\x2\xe"
+
+test vfs-3.4 {vfs helpers: zip} {
+    # If this test fails, probably many other tests will fail too (at
+    # least anything to do with 'zip' vfs).
+    ::vfs::zip -mode decompress "\x78\x9c\x33\x34\x32\x36\x31\x35\x33\xb7\xb0\x34\x0\x0\xb\x2c\x2\xe"
+} {1234567890}
 
 # cleanup
 ::tcltest::cleanupTests
